--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -4,7 +4,6 @@ on:
   push:
     branches:
       - main
-
 jobs:
 
   frontend:
@@ -12,4 +11,6 @@ jobs:
     with:
       environment: 'development'
       app: 'frontend'
-
+      ENV_VAR: ${{ vars.DEV_ENV_VAR }}
+    secrets:
+      ENV_SECRET: ${{ secrets.ENV_SECRET }}
