--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -9,7 +9,8 @@ on:
       app:
         type: string
         required: true
-
+    secrets:
+      ENV_SECRET: ${{ secrets.ENV_SECRET }}
 jobs:
 
   call-build-and-push:
