--- a/.github/workflows/bp.yml
+++ b/.github/workflows/bp.yml
@@ -21,8 +21,8 @@ jobs:
       - name: Generate .env file
         run: echo "${{ secrets.env_vars }}" > env
 
-#      - name: Generate .env file
-#        run: echo "${{ vars.var_env_vars }}" >> env
+      - name: Generate .env file
+        run: echo "${{ vars.var_env_vars }}" >> env
 
       - name: Upload .env as artifact
         uses: actions/upload-artifact@v3
