--- a/.github/workflows/bp.yml
+++ b/.github/workflows/bp.yml
@@ -18,11 +18,11 @@ jobs:
     runs-on: ubuntu-latest
     environment: ${{inputs.environment}}
     steps:
-      - name: Generate .env file
+      - name: Generate Secrets .env file
         run: echo "${{ secrets.env_vars }}" > env
 
-      - name: Generate .env file
-        run: echo "${{ vars.var_env_vars }}" >> env
+      - name: Generate Vars .env file
+        run: echo "${{ vars.env_vars }}" >> env
 
       - name: Upload .env as artifact
         uses: actions/upload-artifact@v3
