--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 jobs:
 
   frontend:
-    uses: ./.github/workflows/deploy-template.yml
+    uses: .github/workflows/deploy-template.yml
     with:
       environment: 'development'
       app: 'frontend'
