--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -49,37 +49,37 @@ jobs:
       - name: Checkout 🛎️
         uses: actions/checkout@v2
 
-      - name: Configure AWS credentials
-        uses: aws-actions/configure-aws-credentials@v2
-        with:
-          aws-access-key-id: ${{ secrets.aws_access_key_id }}
-          aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
-          aws-region: ${{ secrets.aws_region }}
+#      - name: Configure AWS credentials
+#        uses: aws-actions/configure-aws-credentials@v2
+#        with:
+#          aws-access-key-id: ${{ secrets.aws_access_key_id }}
+#          aws-secret-access-key: ${{ secrets.aws_secret_access_key }}
+#          aws-region: ${{ secrets.aws_region }}
 
-      - name: Debug ECR Registry and App
-        run: |
-          echo "ECR Registry: ${{ secrets.ecr_registry }}"
-          echo "App Name: ${{ secrets.app }}"
+#      - name: Debug ECR Registry and App
+#        run: |
+#          echo "ECR Registry: ${{ secrets.ecr_registry }}"
+#          echo "App Name: ${{ secrets.app }}"
 
 
-      - name: Set rev.txt 🛠️
-        run: git show -s --format="%ai %H %s %aN" HEAD > rev.txt
+#      - name: Set rev.txt 🛠️
+#        run: git show -s --format="%ai %H %s %aN" HEAD > rev.txt
+#
+#      - name: Generate Secret .env file
+#        run: |
+#          echo "${{ secrets.env_vars }}" >> .env
+#
+#      - name: Generate Vars .env file
+#        run: |
+#          echo "${{ vars.env_vars }}" >> .env
 
-      - name: Generate Secret .env file
-        run: |
-          echo "${{ secrets.env_vars }}" >> .env
+#      - name: Login to Amazon ECR
+#        uses: aws-actions/amazon-ecr-login@v2
 
-      - name: Generate Vars .env file
-        run: |
-          echo "${{ vars.env_vars }}" >> .env
-
-      - name: Login to Amazon ECR
-        uses: aws-actions/amazon-ecr-login@v2
-
-      - name: Create .npmrc
-        run: |
-          echo "@swiss-digital-assets-institute:registry=https://npm.pkg.github.com" > .npmrc
-          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
+#      - name: Create .npmrc
+#        run: |
+#          echo "@swiss-digital-assets-institute:registry=https://npm.pkg.github.com" > .npmrc
+#          echo "//npm.pkg.github.com/:_authToken=${{ secrets.GITHUB_TOKEN }}" >> .npmrc
 
       - name: Build and Push Docker 🚀
         uses: docker/build-push-action@v2
