--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,8 +4,10 @@ on:
   push:
     branches:
       - main
+
 jobs:
   frontend:
+    runs-on: ubuntu-24.04
     uses: ./.github/workflows/deploy-template.yml
     with:
       environment: 'development'
