--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   frontend:
-    runs-on: ubuntu-24.04
+    runs-on: ubuntu-latest
     uses: ./.github/workflows/deploy-template.yml
     with:
       environment: 'development'
