--- a/.github/workflows/deploy-template.yml
+++ b/.github/workflows/deploy-template.yml
@@ -32,6 +32,7 @@ on:
 jobs:
 
   call-build-and-push:
+    runs-on: ubuntu-24.04
     uses: ./.github/workflows/build-and-push.yaml
     with:
       tag: '${{ needs.call-env.outputs.tag }}'
@@ -46,6 +47,7 @@ jobs:
       env_vars: ${{ secrets.env_vars}}
 
   call-release:
+    runs-on: ubuntu-24.04
     uses: ./.github/workflows/create-release.yaml
     secrets: inherit
     with:
