--- a/.github/workflows/build-and-push.yaml
+++ b/.github/workflows/build-and-push.yaml
@@ -43,7 +43,7 @@ on:
 jobs:
   build-and-push:
     name: Build and Push 📦
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04
     environment: ${{inputs.environment}}
     steps:
       - name: Checkout 🛎️
