--- a/.github/workflows/rb-tpl.yaml
+++ b/.github/workflows/rb-tpl.yaml
@@ -42,6 +42,6 @@ jobs:
 
       - name: Update Docker Image Tag 🏷️
         run: |
-          cd apps/service/overlays/${{ steps.determine_folder.outputs.folder }}
+          cd ./apps/service/overlays/${{ steps.determine_folder.outputs.folder }}
           yq eval '.images[].newTag = "${{ inputs.tag }}"' -i kustomization.yaml
           cat kustomization.yaml
