--- a/.github/workflows/rb-tpl.yaml
+++ b/.github/workflows/rb-tpl.yaml
@@ -43,5 +43,5 @@ jobs:
       - name: Update Docker Image Tag 🏷️
         run: |
           cd ./apps/service/overlays/${{ steps.determine_folder.outputs.folder }}
-          yq eval '.images[].newTag = "${{ inputs.tag }}"' -i kustomization.yaml
+ #         yq eval '.images[].newTag = "${{ inputs.tag }}"' -i kustomization.yaml
           cat kustomization.yaml
