--- a/.github/workflows/rb-tpl.yaml
+++ b/.github/workflows/rb-tpl.yaml
@@ -43,5 +43,4 @@ jobs:
       - name: Update Docker Image Tag 🏷️
         run: |
           cd ./apps/service/overlays/${{ steps.determine_folder.outputs.folder }}
- #         yq eval '.images[].newTag = "${{ inputs.tag }}"' -i kustomization.yaml
-          cat kustomization.yaml
+          cat ./apps/service/overlays/${{ steps.determine_folder.outputs.folder }}/kustomization.yaml
