--- a/.github/workflows/rb-tpl.yaml
+++ b/.github/workflows/rb-tpl.yaml
@@ -49,4 +49,5 @@ jobs:
 #          pwd
       - name: Update Docker Image Tag 🏷️
         run: |
+          yq eval '.images[].newTag = "${{ inputs.tag }}"' -i apps/service/overlays/${{ steps.determine_folder.outputs.folder }}/kustomization.yaml
           cat apps/service/overlays/${{ steps.determine_folder.outputs.folder }}/kustomization.yaml
