--- a/.github/workflows/rb-tpl.yaml
+++ b/.github/workflows/rb-tpl.yaml
@@ -43,11 +43,14 @@ jobs:
           fi
           cat $GITHUB_OUTPUT
 
-#      - name: List Directory Contents
-#        run: |
-#          ls -R
-#          pwd
       - name: Update Docker Image Tag 🏷️
         run: |
-          yq eval '(.helmCharts[] | select(.valuesInline.name == "${{ inputs.app }}") | .valuesInline.image.tag) = "${{ inputs.tag }}"' apps/service/overlays/${{ steps.determine_folder.outputs.folder }}/kustomization.yaml
-          cat apps/service/overlays/${{ steps.determine_folder.outputs.folder }}/kustomization.yaml
+          cd apps/service/overlays/${{ steps.determine_folder.outputs.folder }}
+          if yq eval --exit-status '(.helmCharts[] | select(.valuesInline.name == "${{ inputs.app }}"))' kustomization.yaml > /dev/null 2>&1; then
+          yq eval -i '(.helmCharts[] | select(.valuesInline.name == "'${{ inputs.app }}") | .valuesInline.image.tag) = "${{ inputs.tag }}"' kustomization.yaml
+          echo "Tag updated successfully for app: ${{ inputs.app }}""
+          else
+          echo "App name not found: ${{ inputs.app }}""
+          fi
+          yq eval '(.helmCharts[] | select(.valuesInline.name == "${{ inputs.app }}") | .valuesInline.image.tag) = "${{ inputs.tag }}"' kustomization.yaml
+          cat kustomization.yaml
