--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   test:
     image: node:22
     container_name: app_test
-#    working_dir: /app
-    environment:
-      - NODE_ENV=test
-    command: sh -c "npm install && npm lint"
+    working_dir: /app
+    volumes:
+      - .:/app
+    command: sh -c "npm install && npm run lint"
