--- a/.github/workflows/feature-tpl.yml
+++ b/.github/workflows/feature-tpl.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Run Tests 🧪
         uses: isbang/compose-action@v2.0.0
         with:
-          compose-file: "./docker/docker-compose.yml"
+          compose-file: "./docker-compose.yml"
           down-flags: "--volumes"
           services: |
             test
