--- a/.github/workflows/feature-tpl.yml
+++ b/.github/workflows/feature-tpl.yml
@@ -18,4 +18,4 @@ jobs:
 
       # Шаг 3: Запуск Docker Compose для тестов
       - name: Run tests with Docker Compose
-        run: docker-compose up --abort-on-container-exit
+        run: docker compose up --abort-on-container-exit
