--- a/.github/workflows/feature-tpl.yml
+++ b/.github/workflows/feature-tpl.yml
@@ -11,18 +11,12 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-#      - name: Set up Docker
-#        uses: docker/setup-buildx-action@v2
-#
-#      - name: Run tests with Docker Compose
-#        run: docker compose up --abort-on-container-exit
-
-      - name: SonarQube Scan
-        uses: SonarSource/sonarqube-scan-action@v4.2.1 # Ex: v4.1.0, See the latest version at https://github.com/marketplace/actions/official-sonarqube-scan
-        env:
-          SONAR_HOST_URL: https://sonarqube.pub.mng.hashgraph-group.com/
-          SONAR_TOKEN: squ_e33ae502ecd352c3bc10e03d41948d2c3de5c996
+      - name: Run Trivy vulnerability scanner in repo mode
+        uses: aquasecurity/trivy-action@master
         with:
-          args: >
-            -Dsonar.projectKey=test_project_key
-            -Dsonar.projectName=Test
+          scan-type: 'fs'
+          ignore-unfixed: true
+          format: 'sarif'
+          output: 'trivy-results.sarif'
+          severity: 'CRITICAL'
+          skip-setup-trivy: true
