--- a/.github/workflows/feature-tpl.yml
+++ b/.github/workflows/feature-tpl.yml
@@ -22,10 +22,13 @@ jobs:
         with:
           scan-type: 'fs'
           ignore-unfixed: true
-          format: 'sarif'
-          output: 'trivy-results.sarif'
+          format: 'json'
+          output: 'trivy-results.json'
           severity: 'CRITICAL'
           skip-setup-trivy: true
+
+      - name: Output Trivy results to console
+        run: cat trivy-results.json
 
       - name: Output Trivy results as a table
         run: |
