--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,31 +3,42 @@ name: Create Release
 on:
   push:
     branches:
-      - main
+      - main  # Укажите ветку, при пуше в которую будет создаваться релиз
+    tags:
+      - 'v*'  # Создание релиза при создании тега, начинающегося с 'v' (например, v1.0.0)
 
 jobs:
-  release:
-    name: Create GitHub Release
+  create-release:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v3
 
-      - name: Generate release notes
-        id: release_notes
+      - name: Get version from tag
+        id: get_version
+        if: startsWith(github.ref, 'refs/tags/v')
         run: |
-          echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
-          git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:"- %s" >> $GITHUB_ENV
-          echo "EOF" >> $GITHUB_ENV
+          VERSION=${GITHUB_REF#refs/tags/v}
+          echo "Extracted version: $VERSION"
+          echo "::set-output name=version::$VERSION"
 
-      - name: Create GitHub Release
-        uses: softprops/action-gh-release@v2
+      - name: Create Release
+        id: create_release
+        uses: actions/create-release@v1
         with:
-          tag_name: ${{ github.ref_name }}
-          name: Release ${{ github.ref_name }}
-          body: ${{ env.RELEASE_NOTES }}
+          tag_name: v${{ steps.get_version.outputs.version || '1.0.0' }}
+          release_name: Release v${{ steps.get_version.outputs.version || '1.0.0' }}
           draft: false
           prerelease: false
+          generate_release_notes: true
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.TOKEN }}  # Токен для доступа к GitHub API
+
+#      - name: Upload Release Asset
+#        uses: actions/upload-release-asset@v1
+#        with:
+#          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL для загрузки ассетов
+#          asset_path: ./path/to/your/asset  # Укажите путь к файлу, который нужно загрузить
+#          asset_name: your-asset-name.zip  # Имя файла ассета
+#          asset_content_type: application/zip  # Тип файла
