--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -8,36 +8,28 @@ on:
       - 'v*'  # Создание релиза при создании тега, начинающегося с 'v' (например, v1.0.0)
 
 jobs:
-  create-release:
+  release:
+    name: Create GitHub Release
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-      - name: Get version from tag
-        id: get_version
-        if: startsWith(github.ref, 'refs/tags/v')
+      - name: Generate release notes
+        id: release_notes
         run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          echo "Extracted version: $VERSION"
-          echo "::set-output name=version::$VERSION"
+          echo "RELEASE_NOTES<<EOF" >> $GITHUB_ENV
+          git log $(git describe --tags --abbrev=0 HEAD^)..HEAD --pretty=format:"- %s" >> $GITHUB_ENV
+          echo "EOF" >> $GITHUB_ENV
 
-      - name: Create Release
-        id: create_release
-        uses: actions/create-release@v1
+      - name: Create GitHub Release
+        uses: softprops/action-gh-release@v2
         with:
-          tag_name: v${{ steps.get_version.outputs.version || '1.0.0' }}
-          release_name: Release v${{ steps.get_version.outputs.version || '1.0.0' }}
+          tag_name: ${{ github.ref_name }}
+          name: Release ${{ github.ref_name }}
+          body: ${{ env.RELEASE_NOTES }}
           draft: false
           prerelease: false
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Токен для доступа к GitHub API
-
-#      - name: Upload Release Asset
-#        uses: actions/upload-release-asset@v1
-#        with:
-#          upload_url: ${{ steps.create_release.outputs.upload_url }}  # URL для загрузки ассетов
-#          asset_path: ./path/to/your/asset  # Укажите путь к файлу, который нужно загрузить
-#          asset_name: your-asset-name.zip  # Имя файла ассета
-#          asset_content_type: application/zip  # Тип файла
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
